# calculator

./: .gitignore  Makefile  calculator.html  cleanup.sh  index.html  migrate_apps.sh  migrate_apps_large.sh  migrate_xcode.sh  package-lock.json  package.json  tsconfig.json  vite.config.js
src/: App.vue  main.js  style.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Calculator.vue
src/utils/: evaluate.ts  solver.ts
